@@ -27,6 +27,7 @@ Supported machines:
    * MacBook Pro Core2 Duo 15" (October 2006, June 2007, February 2008, October 2008)
    * MacBook Pro Core2 Duo 17" (October 2006, June 2007, February 2008, October 2008)
    * MacBook Pro 13", 15", 17" (June 2009)
+   * MacBook Pro Core i5/i7 15", 17" (April 2010)
    * MacBook Core Duo (May 2006)
    * MacBook Core2 Duo (November 2006 & May 2007)
    * MacBook Core2 Duo Santa Rosa (November 2007)
